--- a/.travis.yml
+++ b/.travis.yml
@@ -51,9 +51,8 @@ after_script:
 
 script:
   - go test -v ./...
-  - go list ./... | grep -v vendor | xargs go vet -v
   - staticcheck -show-ignored -checks "-ST1017,-U1000,-ST1005,-S1034,-S1012,-SA4006,-SA6005,-SA1019,-SA1024"
-  - unconvert $(go list ./... | grep -v /vendor/)
+  - unconvert .
   - ineffassign .
   - find . ! \( -path './vendor' -prune \) -type f -name '*.go' -print0 | xargs -0 gofmt -l -s
   - golint ./...
