--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ services:
 env:
   global:
     - GO111MODULE=on
-    - GO_REPO_FULLNAME="github.com/goasana/framework"
+    - GO_REPO_FULLNAME="github.com/goasana/asana"
   matrix:
     - ORM_DRIVER=sqlite3   ORM_SOURCE=$TRAVIS_BUILD_DIR/orm_test.db
     - ORM_DRIVER=postgres ORM_SOURCE="user=postgres dbname=orm_test sslmode=disable"
